fixed strange horizontal scrolling thing, touched up responsiveness

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -185,7 +185,7 @@ p{
 .CCtext{
 	margin-left: 4vw;
 	display: inline-block;
-	width: 60%;
+	width: 40%;
 	vertical-align: top;
 	margin-top: 55px;
 	text-align: left;
@@ -234,7 +234,16 @@ p{
 	display: inline-block;
 	background-size: cover;
 }
-
+.Ceciliatext{
+	display: inline-block;
+	width: 40%;
+	vertical-align: top;
+	margin-top: 25px;
+	text-align: left;
+}
+.Ceciliatext h5{
+	font-size: 30px;
+}
 
 /* -------------------------- animation stuff im trying -------------------------- */
 
@@ -263,6 +272,13 @@ p{
 }
 
 /* ^^^ -------------------------- animation stuff im trying -------------------------- ^^^ */ 
+@media screen and (max-width: 1210px) {
+	.Ceciliatext h5{
+	font-size: 25px;
+}
+}
+
+
 @media screen and (max-width: 1100px) {
 	.image{
 		width:400px;
@@ -315,6 +331,9 @@ p{
 	}
 	.secondTextSpecific{
 		margin-right: 0;
+	}
+	.CCtext{
+		margin-left: 0;
 	}
 
 }
@@ -375,6 +394,7 @@ p{
 	.CCtext{
 		width:100%;
 		margin-top:100px;
+		margin-left: 0;
 	}
 	.ccBlackRectangle{
 		margin-left: auto;
@@ -383,6 +403,10 @@ p{
 	.ccTealRectangle{
 		margin-left: auto;
 		margin-right: auto;
+	}
+	.Ceciliatext h5{
+		width:100%;
+		margin-left: 0;
 	}
 
 }
@@ -399,6 +423,9 @@ p{
 	}
 	.hero-image {
 		height: 300px;
+	}
+	.teacherTitle{
+		font-size: 40px;
 	}
 }
 @media screen and (max-width: 600px) {
